crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/hash.fail.stderr
error: concrete `Hash` impl can only be used for items marked `#[reflect_value]`
 --> tests/reflect_derive/hash.fail.rs:5:11
  |
5 | #[reflect(Hash)]
  |           ^^^^

error: unknown attribute parameter: skip_hash
  --> tests/reflect_derive/hash.fail.rs:13:15
   |
13 |     #[reflect(skip_hash = true)]
   |               ^^^^^^^^^
